# StarClass

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.trae/documents/: tech_requirements.md
backend/: .env.example  .gitignore  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/agents/: __init__.py  base.py  llm_factory.py  orchestrator.py  registry.py
backend/app/agents/graphs/: __init__.py  code_coach.py  creative_writer.py  study_coach.py  teaching_assistant.py
backend/app/agents/memory/: long_term.py  short_term.py
backend/app/agents/rag/: __init__.py  pipeline.py
backend/app/agents/tools/: __init__.py  code_analysis.py  homework_tool.py  knowledge_search.py  mcp_base.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  agent.py  chat.py  class_.py  homework.py  knowledge.py  llm_config.py  pet.py  submission.py  user.py
backend/app/routers/: agents.py  auth.py  chat.py  classes.py  homeworks.py  knowledge.py  llm_config.py  pets.py  store.py  submissions.py  users.py
backend/app/schemas/: __init__.py  agent.py  auth.py  homework.py  knowledge.py
backend/app/utils/: init_db.py  seed_data.py
server/: .env.example  README.md  package-lock.json  package.json  seed-store.js  tsconfig.json
server/prisma/: dev.db  schema.prisma
server/scripts/: clear-db.ts  seed-store.ts  seed-users.ts
server/src/: index.ts
server/uploads/: 1771823698138-231370988.html
src/: App.tsx  firebase.ts
src/components/: Icon.tsx  StarDecoration.tsx
(+65 files in other folders)
